# ede

./: .geanyprj  .gitignore  COPYING  Makefile.am  README  TODO  autogen.sh  configure.ac
data/: Makefile.am
data/desktop/: Makefile.am  ede.desktop
data/levels/: Makefile.am  asd.txt  asd2.txt  debug.level  debug_01.level  debug_02.level  easy.scenario  easy_01.level  easy_02.level  easy_levels.scenario  test.scenario  tutorial.scenario
data/themes/default/: Makefile.am  default.edc
data/towers/: Makefile.am  ghost.tower  standard.tower
po/: Makevars
